<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="cancel_editing">cancel Editing</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_post_shared">Shared</string>
    <string name="description_post_viewed">Viewed</string>
    <string name="chooser_repost">Repost</string>
    <string name="add_post">Add Post</string>
    <string name="save">Save</string>
</resources>